# databricks_cv_reference

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: training_config.yaml
configs/: classification_config.yaml  classification_resnet50.yaml  detection_config.yaml  detection_yolo.yaml  segmentation_config.yaml  segmentation_deeplabv3.yaml
data/processing/: coco_processor.py  data_loader.py
data/unity_catalog/: catalog_manager.py
deployment/ci_cd/: deployment_pipeline.py
deployment/serving/: model_server.py
docs/: README.md  api_reference.md  architecture.dot  data_processing.md  deployment.md  evaluation.md  experiment_tracking.md  model_management.md  model_training.md
evaluation/metrics/: classification_metrics.py  detection_metrics.py  segmentation_metrics.py
mlflow/tracking/: experiment_tracker.py
models/: __init__.py
models/architectures/: __init__.py  classification.py
notebooks/: 00_setup_and_config.py  01_data_preparation.py  02_model_training.py  03_hparam_tuning.py  04_model_evaluation.py  05_model_registration_deployment.py  06_model_monitoring.py  1_data_processing.ipynb  2_model_training.ipynb  3_evaluation.ipynb  4_deployment.ipynb  train_classification.py  train_detection.py  train_multitask.py  train_segmentation.py  train_vision_task.py
orchestration/: task_runner.py
schemas/: data.py  model.py
src/: README.md  config.py
tasks/: README.md
tests/: test_classification.py  test_models.py
trainer/: base_trainer.py  ray_trainer.py
transforms/: base.py  classification.py
(+64 files in other folders)
