[tool.poetry]
name = "databricks-cv"
version = "0.1.0"
description = "Computer Vision Architecture for Databricks"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.0"
pytorch-lightning = "^1.5.0"
ray = "^2.0.0"
mlflow = "^2.0.0"
pycocotools = "^2.0.0"
albumentations = "^1.0.0"
databricks-sdk = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.0.0"
black = "^21.0.0"
isort = "^5.0.0"
mypy = "^0.910" 